hopefully fix weird offset on iphone

--- a/apps/dashboard/src/app/test-page/test-page.component.scss
+++ b/apps/dashboard/src/app/test-page/test-page.component.scss
@@ -19,6 +19,8 @@
 .container {
   background-color: $color-neutral-lightest;
   padding-top: var(--app-topbar-height);
+  position: absolute;
+  width: 100%;
 }
 
 .test-page {
